# flib

./: .dockerignore  .gitignore  Dockerfile  README.md  amlsim.yml  pyproject.toml  requirements.txt  setup.cfg  test.txt
AMLsim/: .gitignore  Dockerfile  amlsim.yml  conf.json  degree.csv  only_sar.csv  requirements.txt  scb_statistics_2021.csv  test_degree.csv
auto-aml-data-gen/: .gitignore  README.md  best_params.txt  classifier.py  log.txt  main.py  optimizer.py  preprocess.py  simulate.py  tmp.ipynb  train.py  utils.py
benchmark/: stat_models.py
examples/: .gitignore  federated_learning.ipynb  main.py  stat_models.ipynb  statmodels.ipynb
experiments/: best_hyperparams.py  generate.py  hyperparams.py  plot.py  plot_combined.py  plot_data.py  preprocess.py  stat_models.ipynb  train.py  tune_data.py  tune_hyperparams.py
federated-learning/: .gitignore  client.py  main.py  param_search.txt  server.py
federated-learning-v2/: client.py  data.py  main.py  modules.py  plot.py  preprocessing-v2.py  server.py
gnn/: data.py  main.py  main_SHAP.py  main_lime.py  main_lime_notebook.ipynb  main_shap.py  modules.py  preprocessing.py  tmp.ipynb
noise/: generate_FP_FN.py  generate_neighbour.py  generate_topology.py
preprocess/: feature_engineering.py  noise.py  pytest.ini
scripts/: concat_iso_data.py  generate.py  plot.py  preprocess.py  train.py  tune_data.py  tune_hyperparams.py
statmodels/: README  train_all_models.py
thesis_XAML/: 100K_accts_EASY25.pth  AMLSimDataset_test.ipynb  Anchors.ipynb  C-LIMEtest.ipynb  CSDC.ipynb  CounterfactualTest.ipynb  data.py  (+46 more)
(+462 files in other folders)
