[metadata]
name = flib
version = 0.1.0
author = AISE
author_email = info@ai.se
description = Package for evaluating federated learning for anti-money laundering
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.ai.se/sv/projekt/federerad-maskininlarning-i-banksektorn
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE.txt

[options]
packages = find:

[options.packages.find]
include = flib